<resources>
    <string name="app_name">傻孩子店主端</string>
    <string name="applicationId">com.yinglan.scm</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="submitSuccess">提交成功</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="deleteLoad">删除中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="saveLoad">保存中&#8230;</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="failedUploadPicture">上传图片失败，请重试</string>
    <string name="noData">没有数据</string>
    <string name="denyPermission">您拒绝了「图片选择」所需要的相关权限!</string>
    <string name="needPermission">图片选择需要以下权限:\n\n1.访问设备上的照片\n\n2.拍照\n\n3.读写权限</string>
    <string name="login">登录</string>
    <string name="number0">0123456789</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="accountNumber">帐号</string>
    <string name="hintAccountText">请输入手机号码</string>
    <string name="inputPhone">请输入正确的帐号</string>
    <string name="password">密码</string>
    <string name="hintPhoneText2">国际号码前无需加0</string>
    <string name="hintPasswordText">请输入数字、字母或字符</string>
    <string name="hintPasswordText5">请输入密码</string>
    <string name="hintPasswordText3">请输入确认密码</string>
    <string name="hintPasswordText4">请再次输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码为6～20位内的数字、字母或字符组合,请正确填写</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="bindingPhone">绑定手机号</string>
    <string name="binding">绑定</string>
    <string name="register">注册</string>
    <string name="noAccount">没有账号？</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请填写验证码</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="loginErr1">获取用户信息失败，请重新登录</string>
    <string name="failedCloudInformation">获取融云信息失败</string>
    <string name="failedCloudInformation1">获取融云信息失败,请用账号密码登录</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="selectCountryCode">选择国家区码</string>
    <string name="registerPhone">手机号注册</string>
    <string name="hintPhoneText">请输入手机号</string>
    <string name="hintPhoneText1">请输入正确的手机号</string>
    <string name="hintInvitationCode">请输入邀请码</string>
    <string name="hintPassword1Text">请输入您的密码</string>
    <string name="hintPassword2Text">请再次输入您的密码</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="confirmPassword">确认密码</string>
    <string name="pleasePasswordAgain">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="passwordMismatch">两次密码输入不一致</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="revalidation">重新验证</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">点击注册即表示您同意</string>
    <string name="agreement">《傻孩子注册协议》</string>
    <string name="agreement1">傻孩子注册协议</string>
    <string name="determine">确定</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="locationRelatedPermission">您拒绝了「定位」所需要的相关权限!</string>
    <string name="experienceImmediately">立即体验</string>
    <string name="notOpenPositionSwitchClose">本应用需要结合定位功能使用，请点击按钮关闭应用，去打开定位开关后，重启应用即可正常使用</string>
    <string name="homePage">首页</string>
    <string name="message">消息</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="clickAgainExitProgram">再按一次退出程序</string>
    <string name="sillyChildBusinessman">傻孩子店主端</string>
    <string name="myIdentity">我的身份</string>
    <string name="enterNameStore">请输入店铺名称(建议少于10个字)</string>
    <string name="asManager">成为店长</string>
    <string name="certified">已认证</string>
    <string name="audit">待审核</string>
    <string name="unapprove">审核未通过</string>
    <string name="audit1">账号待审核</string>
    <string name="disabled">已禁用</string>
    <string name="disabled1">账号被禁用</string>
    <string name="shopNum">店铺号：</string>
    <string name="manager">店长</string>
    <string name="recertification">重新认证</string>
    <string name="sillyChildCustomerService">傻孩子客服</string>
    <string name="shopkeeperCertificat">店主认证</string>
    <string name="authenticationInformation">认证信息(必填)</string>
    <string name="localIdentityCard">手持当地身份证正面照</string>
    <string name="localIdentityCard1">请上传手持当地身份证正面照</string>
    <string name="enterName">请输入您的姓名</string>
    <string name="submitAudit">提交审核</string>
    <string name="submitAudit1">提交成功,请等待审核</string>
    <string name="uploadStoreIcon">请上传店铺图标</string>
    <string name="enterNameStore1">请输入店铺名称</string>
    <string name="interactiveMessage">互动消息</string>
    <string name="systemMessage">系统消息</string>
    <string name="systemMessageDetails">消息详情</string>
    <string name="noSystemMessage">亲，您还没有系统消息哟~</string>
    <string name="orderMessage">订单消息</string>
    <string name="deliveryMessage">物流消息</string>
    <string name="noMessage">亲，您还没有消息哟~</string>
    <string name="myOrder">我的订单</string>
    <string name="obligation">待付款</string>
    <string name="sendGoods">待发货</string>
    <string name="waitGoods">待收货</string>
    <string name="completed">已完成</string>
    <string name="closed">交易关闭</string>
    <string name="afterSale">售后</string>
    <string name="afterSale1">售后中</string>
    <string name="haveAfter">已售后</string>
    <string name="all">全部</string>
    <string name="confirmDelivery">确认发货</string>
    <string name="noEvaluation">未评价</string>
    <string name="seeEvaluation">查看评价</string>
    <string name="seeOrder">查看订单</string>
    <string name="refused">拒绝</string>
    <string name="agreed">同意</string>
    <string name="orderNumber">订单号：</string>
    <string name="orderNumber1">订单编号：</string>
    <string name="totalOnlyWord">共</string>
    <string name="goods">件商品</string>
    <string name="renminbi">¥</string>
    <string name="multiply">x</string>
    <string name="actualPaymentInCart">实付款：</string>
    <string name="retry">重试</string>
    <string name="noOrder">亲，您还没有订单哟~</string>
    <string name="waitingPayment">等待买家付款</string>
    <string name="lateCancelled">请在</string>
    <string name="lateCancelled1">内付款，逾期订单将被取消</string>
    <string name="payment1">付款</string>
    <string name="checkLogistics">查看物流</string>
    <string name="orderDetails">订单详情</string>
    <string name="waitSending">等待发货</string>
    <string name="sellerShippedGoods">卖家已发货</string>
    <string name="orderEnteredWarehouse">您的订单已交付快递公司，请耐心等待</string>
    <string name="minute">分</string>
    <string name="seconds">秒</string>
    <string name="transactionCompleted">交易已完成</string>
    <string name="applyAfterSales">申请售后</string>
    <string name="applyAfterSales1">申请售后中</string>
    <string name="afterComplete">售后完成</string>
    <string name="afterRefusing">售后拒绝</string>
    <string name="merchantPassed">待平台审核</string>
    <string name="sellerAppliesRefund">卖家申请退款</string>
    <string name="commodityInformation">商品信息</string>
    <string name="orderInformation">订单信息</string>
    <string name="goodsTogether">商品合计：</string>
    <string name="freight1">运费：</string>
    <string name="coupons1">优惠券：</string>
    <string name="preferentialActivities">活动优惠：</string>
    <string name="submitTime">提交时间：</string>
    <string name="amountRealPay">实付金额：</string>
    <string name="paymentTime">付款时间：</string>
    <string name="deliveryTime">发货时间：</string>
    <string name="modePayment">支付方式：</string>
    <string name="weChatPay">微信支付</string>
    <string name="alipayToPay">支付宝支付</string>
    <string name="unionpayPay">银联支付</string>
    <string name="balancePay">余额支付</string>
    <string name="expressNumber">填写快递单号</string>
    <string name="expressNumber1">请填写快递单号</string>
    <string name="courierCompany">快递公司名称</string>
    <string name="courierCompany1">请选择快递公司名称</string>
    <string name="successfulDelivery">发货成功</string>
    <string name="makeSureRejectApplication">确定拒绝售后申请</string>
    <string name="confirmApprovalAfterSalesApplication">确定同意售后申请</string>
    <string name="reloginPrompting">登录超时，或者在其它设备上登录了，请重新登录！</string>
    <string name="orderTracking">订单跟踪</string>
    <string name="afterWhy">售后原因</string>
    <string name="notfillAfterSaleReason">未填写售后描述</string>
    <string name="accountAfterSalesService">请详细描述您的售后原因</string>
    <string name="afterType1">售后类型：</string>
    <string name="refundAmount">退款金额：</string>
    <string name="problemDescription">问题描述：</string>
    <string name="afterNumber">售后数量：</string>
    <string name="afterWhy1">售后原因：</string>
    <string name="toAudit">待审核</string>
    <string name="pendingDelivery">审核成功待用户发货</string>
    <string name="merchantRefund">商家已退款，待平台退款</string>
    <string name="refuseApplyAfterSales">商家拒绝售后申请</string>
    <string name="platformRefundCompleted">平台退款完成,拒绝再次申请</string>
    <string name="afterSalesDetails">售后详情</string>
    <string name="storeRatings">店铺评分</string>
    <string name="descriptionConsistent">描述相符</string>
    <string name="logisticsService">物流服务</string>
    <string name="serviceAttitude">服务态度</string>
    <string name="ordersTotal">订单总数</string>
    <string name="storeLevel">店铺等级</string>
    <string name="businessLevel">商家等级</string>
    <string name="myStores">我的店铺</string>
    <string name="myWallet">我的钱包</string>
    <string name="sillyChildCollege">傻孩子学院</string>
    <string name="sharePolite">分享有礼</string>
    <string name="setUp">设置</string>
    <string name="notLogged">您还没有登录</string>
    <string name="loginImmediately">立即登录</string>
    <string name="merchants">商家</string>
    <string name="recertification1">认证失败，请重新认证</string>
    <string name="certificationProcess">认证审核中，请耐心等待</string>
    <string name="accountNumberDisabled">账号被禁用，请联系客服</string>
    <string name="youNotCertified">您还未认证，请先提交认证</string>
    <string name="classification">分类</string>
    <string name="allState">全部状态</string>
    <string name="inventory">库存</string>
    <string name="price">价格</string>
    <string name="itemAdd">新增商品</string>
    <string name="goodName">商品名称：</string>
    <string name="warehouseInventory">仓库库存：</string>
    <string name="commodityPrice">商品售价：</string>
    <string name="inSale">在售中</string>
    <string name="hasOffShelves">已下架</string>
    <string name="sureAboutProduct">确定下架该产品吗</string>
    <string name="accountBalance">账户余额</string>
    <string name="withdrawal">提现</string>
    <string name="bankCard">银行卡</string>
    <string name="withdrawalRuleDescription">提现规则说明</string>
    <string name="withdrawalRuleDescription1">1、提现次数：供货商不限制提现次数，到账规则详见“提现周期”规定。\n2、提现账户：可以选择工商银行、农业银行、中国银行、建设银行、邮政银行、招商银行、支付宝、财付通账户。\n3、提现费率：提现费率：0.1%，提现手续费将从余额中扣除。\n4、受限于银行系统规则，请所有商户仔细核对银行提现帐号，由于银行帐号原因引起的提现失败会扣除手续费，且资金返回周期为T+1，感谢配合。</string>
    <string name="idNumber">身份证号</string>
    <string name="pleaseidNumber">请正确填写身份证号码</string>
    <string name="versionNumber">版本号</string>
    <string name="clearCache">清除缓存</string>
    <string name="helpCenter">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="aboutUs">关于我们</string>
    <string name="logOut">退出登录</string>
</resources>