<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <TextView style="@style/DividerWidth" />


    <LinearLayout
        style="@style/MatchWrap"
        android:layout_marginLeft="@dimen/dimen8"
        android:layout_marginRight="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen10"
        android:background="@color/whiteColors"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/MatchWrap"
            android:gravity="center"
            android:padding="@dimen/dimen15"
            android:text="@string/authenticationInformation"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize15" />

        <TextView style="@style/DividerWidth" />


        <LinearLayout
            style="@style/MatchWrap"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrap"
                android:layout_marginLeft="@dimen/dimen26"
                android:layout_marginRight="@dimen/dimen41"
                android:text="@string/localIdentityCard"
                android:textColor="@color/titletextcolors"
                android:textSize="@dimen/textsize15" />

            <ImageView
                android:id="@+id/img_localIdentityCard"
                android:layout_width="@dimen/dimen120"
                android:layout_height="@dimen/dimen100"
                android:layout_marginBottom="@dimen/dimen20"
                android:layout_marginTop="@dimen/dimen20"
                android:scaleType="fitXY"
                android:src="@mipmap/home_add_pictures" />

        </LinearLayout>


        <LinearLayout
            style="@style/Match45"
            android:layout_marginTop="@dimen/dimen1"
            android:background="@color/whiteColors"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen20"
            android:paddingRight="@dimen/dimen20">

            <TextView
                style="@style/WrapWrap"
                android:text="@string/idNumber"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textsize14" />


            <EditText
                android:id="@+id/et_idNumber"
                style="@style/MatchMatch"
                android:background="@android:color/transparent"
                android:gravity="right|center_vertical"
                android:hint="@string/pleaseidNumber"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize14" />

        </LinearLayout>









    </LinearLayout>


    <TextView
        android:id="@+id/tv_submitAudit"
        style="@style/Match40"
        android:layout_marginLeft="@dimen/dimen73"
        android:layout_marginRight="@dimen/dimen73"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@drawable/shape_homepagebtn"
        android:gravity="center"
        android:text="@string/submitAudit"
        android:textColor="@color/whiteColors"
        android:textSize="@dimen/textsize16" />


</LinearLayout>